--- a/NetDiskApiMicroservice/pyproject.toml
+++ b/NetDiskApiMicroservice/pyproject.toml
@@ -3,7 +3,6 @@ name = "netdiskapimicroservice"
 version = "0.1.0"
 description = ""
 authors = ["Andrey <ykt_andrey@mail.ru>"]
-readme = "README.md"
 packages = [{ include = "src", from = "." }]
 
 [tool.poetry.dependencies]
@@ -15,6 +14,8 @@ injector = "^0.21.0"
 django-environ = "^0.11.2"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
+pytest-asyncio = "^0.23.7"
+pytest-mock = "^3.14.0"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
 black = "^24.4.2"
