--- a/NetDiskApiMicroservice/pyproject.toml
+++ b/NetDiskApiMicroservice/pyproject.toml
@@ -11,11 +11,11 @@ fastapi = "^0.111.0"
 
 
 injector = "^0.21.0"
-django-environ = "^0.11.2"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
 pytest-asyncio = "^0.23.7"
 pytest-mock = "^3.14.0"
+pydantic-settings = "^2.2.1"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
 black = "^24.4.2"
