domain: change dataclasses on pydantic dataclasses; infrastructure: implement resource repository

--- a/NetDiskApiMicroservice/Dockerfile
+++ b/NetDiskApiMicroservice/Dockerfile
@@ -2,4 +2,8 @@ FROM debian:12
 
 RUN apt-get update && apt-get -y install pgpool2
 
-CMD ["pgpool"]
+RUN echo 'sleep infinity' >> /bootstrap.sh
+
+RUN chmod +x /bootstrap.sh
+
+CMD /bootstrap.sh
