--- a/SsoMicroservice/package.json
+++ b/SsoMicroservice/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.9",
@@ -32,9 +33,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.14",
@@ -49,6 +52,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
