--- a/SsoMicroservice/package.json
+++ b/SsoMicroservice/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.9",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.3.9",
     "@types/bcrypt": "^5.0.2",
